<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_group_tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/speedTestFragment"
                    android:icon="@android:drawable/ic_media_play"
                    android:title="@string/nav_speed_test" />
                <item
                    android:id="@+id/towerClustersFragment"
                    android:icon="@android:drawable/ic_menu_mylocation"
                    android:title="@string/nav_tower_clusters" />
                <item
                    android:id="@+id/diagnosticsFragment"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/nav_diagnostics" />
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/nav_settings" />
            </group>
        </menu>
    </item>
</menu>
